# AgentVeil

./: .env.example  .gitignore  README.md  foundry.toml  package-lock.json
agents/: buyer.py  intent_hash.py  refund.py  vendor.py
contracts/: AgentPay.sol  IIntentVerifier.sol  SimpleIntentVerifier.sol
frontend/: .env.example  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
frontend/.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
frontend/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  server-reference-manifest.json
frontend/.next/server/app/: _not-found.rsc  create-intent.html  create-intent.rsc  page.js  (+8 more)
frontend/.next/types/: routes.d.ts  validator.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/create-intent/: page.tsx
frontend/app/fulfill-intent/: page.tsx
frontend/app/intent-explorer/: page.tsx
frontend/app/refund-intent/: page.tsx
frontend/components/: brand-logo.tsx  create-intent-form.tsx  fulfill-intent-form.tsx  home-typing-card.tsx  intent-explorer.tsx  refund-intent-form.tsx  site-shell.tsx  wallet-provider.tsx  wallet-status.tsx  web3-provider.tsx
frontend/lib/: agentpay.ts  polkadot-testnet.ts
lib/forge-std/src/: Script.sol  Test.sol  Vm.sol  console2.sol
rust-verifier/: .gitignore  COMMIT_PLAN.md  Cargo.toml  README.md  lib.rs
scripts/: DeployAgentPay.s.sol
test/: AgentPay.t.sol
(+38 files in other folders)
