[package]
name = "commitment_verifier"
version = "0.1.0"
authors = ["tatan"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "6.0.0-beta.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = { version = "6.0.0-beta.1" }

[lib]
path = "lib.rs"

[package.metadata.ink-lang]
abi = "all"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []

[profile.release]
overflow-checks = false
